# py-zebra-scanner-windows

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  zebra-scanner.sln  zebra_scanner.pyi
zebra-scanner/: _CoreScanner.idl  attribute.cpp  barcode.cpp  event_sink.cpp  scanner.cpp  zebra-scanner.vcxproj  zebra-scanner.vcxproj.filters  zebra_scanner.cpp
zebra-scanner/include/: attribute.h  barcode.h  call_python.h  common_defs.h  event_bridge.h  event_sink.h  scanner.h  zebra_scanner.h
zebra-scanner/lib/pugixml/: pugixml.cpp
